fix(collapsible-item): remove double border when items are collapsing
A bug was identified whereby a border-bottom applied to a parent item,
coupled with a border-top applied to a child item, produced a 2px border
whilst an item was closing. This has been fixed by adding/removing
borders to the relevant elements whilst the closing transition occurs.

--- a/components/collapsible-item/styles.less
+++ b/components/collapsible-item/styles.less
@@ -101,21 +101,31 @@
       overflow: hidden;
       margin-bottom: 0px;
 
-      .list-group-item:first-child {
-        border-top: none;
-      }
-
       &[aria-expanded=true] {
         height: auto;
         overflow: inherit;
-
       }
+
       &.collapsing {
         overflow: hidden;
+
+        &[aria-expanded=true] {
+          .list-group-item:first-child {
+            border-top: 1px solid @gray-lighter;
+          }
+        }
+
+        &[aria-expanded=false] {
+          .list-group-item:first-child {
+            border-top: none;
+          }
+        }
       }
 
-      .list-group-item:first-child {
-        border-top: 1px solid @gray-lighter;
+      &.in {
+        .list-group-item:first-child {
+          border-top: 1px solid @gray-lighter;
+        }
       }
     }
 
